--- a/css/style.css
+++ b/css/style.css
@@ -292,11 +292,12 @@ section {
       -ms-flex-pack: center;
           justify-content: center;
   margin-top: 2em;
-  gap: 2.5em;
+  gap: 1rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .header .btn-container a {
-  height: 2em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
